[gd_scene load_steps=12 format=3 uid="uid://doolxgudp75bj"]

[ext_resource type="Script" path="res://Player/mutation_skill.gd" id="1_nw81d"]
[ext_resource type="Texture2D" uid="uid://dcek8l4n6dqt4" path="res://Res/menu frame.png" id="2_aecps"]
[ext_resource type="FontFile" uid="uid://bnimycfhliitt" path="res://Res/aseprite-remix.ttf" id="3_wn3ek"]
[ext_resource type="Texture2D" uid="uid://co7ipp52uimuv" path="res://Res/button.png" id="4_367g2"]
[ext_resource type="Texture2D" uid="uid://dxy7aus7y5qft" path="res://Res/button pressed.png" id="5_8dy6v"]
[ext_resource type="Texture2D" uid="uid://dqn2gna42tmyb" path="res://Res/button hover.png" id="6_uam5k"]
[ext_resource type="Texture2D" uid="uid://ck75yhjelwvpe" path="res://Res/toxic ui element full.png" id="7_ky7q3"]
[ext_resource type="Texture2D" uid="uid://di3wflinklog3" path="res://Res/toxic ui element empty.png" id="8_lddf5"]
[ext_resource type="PackedScene" uid="uid://h6pfactd5jlv" path="res://skill_pict.tscn" id="9_p53vv"]
[ext_resource type="Script" path="res://Player/PressSkill.gd" id="9_sodmj"]
[ext_resource type="Texture2D" uid="uid://jr7n0gl7beng" path="res://Res/frame2.png" id="10_1kffw"]

[node name="MutationSkill" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nw81d")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -286.0
offset_right = 375.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_aecps")

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -191.0
offset_right = 87.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
theme_override_font_sizes/font_size = 41
text = "Mutation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="TextureRect/Label2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
text = "Choose two skill"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DmgText" type="Label" parent="TextureRect/Label2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = 256.0
offset_right = 169.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
text = "Level skill: $$$$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitBtn" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 180.0
offset_right = 75.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_367g2")
texture_pressed = ExtResource("5_8dy6v")
texture_hover = ExtResource("6_uam5k")
stretch_mode = 6

[node name="Label" type="Label" parent="TextureRect/ExitBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartBtn" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 126.0
offset_right = 75.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_367g2")
texture_pressed = ExtResource("5_8dy6v")
texture_hover = ExtResource("6_uam5k")
texture_disabled = ExtResource("5_8dy6v")
stretch_mode = 6

[node name="Label" type="Label" parent="TextureRect/StartBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
text = "Mutate!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect5" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -57.0
offset_right = 173.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = ExtResource("7_ky7q3")

[node name="TextureRect8" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -144.0
offset_right = -48.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_lddf5")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/TextureRect8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 63.0
offset_right = -12.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/TextureRect8/ScrollContainer"]
layout_mode = 2
script = ExtResource("9_sodmj")

[node name="SkillPict" parent="TextureRect/TextureRect8/ScrollContainer/VBoxContainer" instance=ExtResource("9_p53vv")]
layout_mode = 2

[node name="TextureRect7" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 57.0
offset_top = -80.0
offset_right = 94.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ky7q3")

[node name="TextureRect3" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -100.0
offset_right = 64.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_1kffw")

[node name="TextureRect6" type="TextureRect" parent="TextureRect/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="LvlText" type="Label" parent="TextureRect/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = 34.0
offset_right = 40.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
theme_override_font_sizes/font_size = 12
text = "lvl: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect6" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 87.0
offset_top = -100.0
offset_right = 157.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_1kffw")

[node name="TextureRect6" type="TextureRect" parent="TextureRect/TextureRect6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="LvlText" type="Label" parent="TextureRect/TextureRect6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = 34.0
offset_right = 40.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.313726, 0.345098, 0.415686, 1)
theme_override_fonts/font = ExtResource("3_wn3ek")
theme_override_font_sizes/font_size = 12
text = "lvl: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 10.0
offset_right = 112.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_1kffw")

[node name="TextureRect6" type="TextureRect" parent="TextureRect/TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[connection signal="pressed" from="TextureRect/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="TextureRect/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="gui_input" from="TextureRect/TextureRect3" to="." method="_on_texture_rect_3_gui_input"]
[connection signal="gui_input" from="TextureRect/TextureRect6" to="." method="_on_texture_rect_6_gui_input"]
